fix(predictive-search): fix predictive search results logic. Delete the evaluation of mega menu opened, now any mega menu can be opened behind the results, this is how it's also in Todd Snyder's store

--- a/assets/header-search.css
+++ b/assets/header-search.css
@@ -43,7 +43,7 @@
     width: auto;
     height: auto;
     padding-right: 1rem;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.2);
     z-index: 5;
 }
 
